# top-streamers-weekly

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.sh  metadata.yaml  pyproject.toml  railway.toml  requirements.txt  run_pipeline.py
.devcontainer/: devcontainer.json
data_exporters/: export_to_iceberg.py
data_loaders/: load_streamer_data.py
pipelines/weekly_streamer_stats/: __init__.py  metadata.yaml
scripts/: config.py  data_ingestion.py
transformers/: transform_streamer_data.py
