[tool.poetry]
name = "top-streamers-weekly"
version = "0.1.0"
description = "A project for generating/creating weekly reports revolving around the \"top streamers\""
authors = ["Simon Roadknight <s.roadknight96@gmail.com>"]
license = "Unlicense license"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = ">=2.31.0,<2.32.0"
pandas = "^2.2.3"
pyiceberg = {extras = ["glue"], version = "^0.7.1"}
setuptools = "^75.3.0"
pyarrow = "^14.0.1"
pydantic = ">=2.0,<2.4.0"
pydantic-settings = "^2.0.0"
mage-ai = "0.9.74"
typing-extensions = "4.10.0"
dbt = "^1.0.0.38.22"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"
